# mimir-1

./: .gitignore  .rls.toml  Cargo.toml  README.md  build.rs  clippy.toml
src/: bindings.rs  connection.rs  context.rs  error.rs  ffi.rs  lib.rs  macros.rs  msgprops.rs  util.rs  version.rs
src/common/: encoding.rs  error.rs  mod.rs  version.rs  versioninfo.rs
src/connection/: mod.rs
src/context/: errorinfo.rs  mod.rs  params.rs
src/data/: mod.rs
src/dequeue/: mod.rs
src/enqueue/: mod.rs
src/ffi/: mod.rs
src/lob/: mod.rs
src/message/: mod.rs
src/object/: mod.rs
src/objecttype/: mod.rs
src/odpi/: constants.rs  context.rs  externs.rs  flags.rs  init.rs  mod.rs  opaque.rs  structs.rs
src/pool/: mod.rs
src/public/: connection.rs  context.rs  data.rs  deqopts.rs  enqopts.rs  mod.rs  object.rs  statement.rs  variable.rs
src/query/: mod.rs
src/rowid/: mod.rs
src/statement/: mod.rs
src/subscription/: mod.rs
src/variable/: mod.rs
