[package]
authors = ["Jason Ozias <jason.g.ozias@gmail.com>"]
description = "Rust bindings over the Oracle Database Programming Interface for Drivers and Applications"
documentation = "http://rustyhorde.github.io/mimir"
homepage = "http://rustyhorde.github.io/mimir"
keywords = ["oracle", "driver", "bindings"]
license = "MIT/Apache-2.0"
name = "mimir"
readme = "README.md"
repository = "https://github.com/rustyhorde/mimir"
version = "0.1.0"

[build-dependencies]
gcc = "0.3.45"

[dependencies]
bitflags = "0.8.2"
chrono = { version = "0.3", features = ["serde"] }
error-chain = "0.10.0"
lazy_static = "0.2.8"
rand = "0.3.15"
slog = "2.0.2"
